--- a/nodes/v2rayshare.yaml
+++ b/nodes/v2rayshare.yaml
@@ -32,312 +32,265 @@ log-level: info
 mixed-port: 7890
 mode: rule
 proxies:
-- cipher: aes-256-gcm
-  name: 🇺🇸_US_美国_1
-  password: PCnnH6SQSnfoS27
-  port: 8091
-  server: 23.157.40.5
-  type: ss
+- alterId: 0
+  cipher: auto
+  name: 🇨🇷_CR_哥斯达黎加->🇨🇦_CA_加拿大_1
+  network: ws
+  port: 2082
+  server: 190.93.246.120
+  skip-cert-verify: true
+  sni: ''
+  type: vmess
   udp: true
-- cipher: aes-256-gcm
-  name: 🇺🇸_US_美国_2
-  password: XKFKl2rULjIp74
-  port: 8009
-  server: 38.110.1.17
-  type: ss
+  uuid: 5f3f09ad-89cb-4e94-a7ad-aa8239913555
+  ws-opts:
+    headers:
+      host: ip18.6929198.xyz
+    path: /github.com/Alvin9999
+- alterId: 0
+  cipher: auto
+  name: 🇺🇸_US_美国->🇨🇦_CA_加拿大_1
+  network: ws
+  port: 2082
+  server: 154.83.2.121
+  type: vmess
   udp: true
-- cipher: aes-256-gcm
-  name: 🇺🇸_US_美国_3
-  password: Y6R9pAtvxxzmGC
-  port: 8888
-  server: 38.110.1.35
-  type: ss
+  uuid: 5f3f09ad-89cb-4e94-a7ad-aa8239913555
+  ws-opts:
+    headers:
+      host: ip18.6929198.xyz
+    path: /github.com/Alvin9999
+- alterId: 0
+  cipher: auto
+  name: 🇨🇷_CR_哥斯达黎加->🇨🇦_CA_加拿大_2
+  network: ws
+  port: 2082
+  server: 190.93.247.23
+  type: vmess
   udp: true
-- cipher: aes-256-gcm
-  name: 🇺🇸_US_美国_4
-  password: TEzjfAYq2IjtuoS
-  port: 6697
-  server: 169.197.142.216
-  type: ss
+  uuid: 5f3f09ad-89cb-4e94-a7ad-aa8239913555
+  ws-opts:
+    headers:
+      host: ip18.6929198.xyz
+    path: /github.com/Alvin9999
+- alterId: 0
+  cipher: auto
+  name: 🇺🇸_US_美国->🇨🇦_CA_加拿大_2
+  network: ws
+  port: 2082
+  server: 190.93.245.168
+  skip-cert-verify: true
+  sni: ''
+  type: vmess
   udp: true
-- cipher: aes-256-gcm
-  name: 🇺🇸_US_美国_5
-  password: TEzjfAYq2IjtuoS
-  port: 6679
-  server: 38.110.1.35
-  type: ss
+  uuid: 5f3f09ad-89cb-4e94-a7ad-aa8239913555
+  ws-opts:
+    headers:
+      host: ip18.6929198.xyz
+    path: /github.com/Alvin9999
+- alterId: 0
+  cipher: auto
+  name: 🇨🇷_CR_哥斯达黎加->🇨🇦_CA_加拿大_3
+  network: ws
+  port: 2082
+  server: 190.93.247.221
+  skip-cert-verify: true
+  sni: ''
+  type: vmess
   udp: true
-- cipher: aes-256-gcm
-  name: 🇺🇸_US_美国_6
-  password: PCnnH6SQSnfoS27
-  port: 8091
-  server: 139.64.165.155
-  type: ss
+  uuid: 5f3f09ad-89cb-4e94-a7ad-aa8239913555
+  ws-opts:
+    headers:
+      host: ip18.6929198.xyz
+    path: /github.com/Alvin9999
+- alterId: 0
+  cipher: auto
+  name: 🇺🇸_US_美国->🇨🇦_CA_加拿大_3
+  network: ws
+  port: 2082
+  server: 190.93.245.174
+  skip-cert-verify: true
+  sni: ''
+  type: vmess
   udp: true
-- cipher: aes-256-gcm
-  name: 🇺🇸_US_美国_7
-  password: Y6R9pAtvxxzmGC
-  port: 5001
-  server: 69.50.95.218
-  type: ss
+  uuid: 5f3f09ad-89cb-4e94-a7ad-aa8239913555
+  ws-opts:
+    headers:
+      host: ip18.6929198.xyz
+    path: /github.com/Alvin9999
+- alterId: 0
+  cipher: auto
+  name: 🇨🇷_CR_哥斯达黎加->🇨🇦_CA_加拿大_4
+  network: ws
+  port: 2082
+  server: 190.93.247.170
+  type: vmess
   udp: true
-- cipher: aes-128-gcm
-  name: 🇬🇧_GB_英国->🇺🇸_US_美国
-  password: shadowsocks
-  port: 443
-  server: 212.102.53.80
-  type: ss
+  uuid: 5f3f09ad-89cb-4e94-a7ad-aa8239913555
+  ws-opts:
+    headers:
+      host: ip18.6929198.xyz
+    path: /github.com/Alvin9999
+- alterId: 0
+  cipher: auto
+  name: 🇺🇸_US_美国->🇨🇦_CA_加拿大_4
+  network: ws
+  port: 2082
+  server: 168.100.6.46
+  type: vmess
   udp: true
-- cipher: aes-256-gcm
-  name: 🇺🇸_US_美国_8
-  password: lGqs95QkFHo2NV
-  port: 5498
-  server: 69.50.95.53
-  type: ss
+  uuid: 5f3f09ad-89cb-4e94-a7ad-aa8239913555
+  ws-opts:
+    headers:
+      host: ip18.6929198.xyz
+    path: /github.com/Alvin9999
+- alterId: 0
+  cipher: auto
+  name: 🇱🇹_LT_立陶宛->🇨🇦_CA_加拿大_1
+  network: ws
+  port: 2082
+  server: 89.117.112.181
+  type: vmess
   udp: true
-- cipher: aes-256-gcm
-  name: 🇺🇸_US_美国_9
-  password: KixLvKzwjekG00rm
-  port: 8080
-  server: 23.157.40.5
-  type: ss
+  uuid: 5f3f09ad-89cb-4e94-a7ad-aa8239913555
+  ws-opts:
+    headers:
+      host: ip18.6929198.xyz
+    path: /github.com/Alvin9999
+- alterId: 0
+  cipher: auto
+  name: 🇱🇹_LT_立陶宛->🇨🇦_CA_加拿大_2
+  network: ws
+  port: 2082
+  server: 185.148.107.11
+  type: vmess
   udp: true
-- cipher: aes-256-gcm
-  name: 🇺🇸_US_美国_10
-  password: lGqs95QkFHo2NV
-  port: 5499
-  server: 69.50.95.218
-  type: ss
+  uuid: 5f3f09ad-89cb-4e94-a7ad-aa8239913555
+  ws-opts:
+    headers:
+      host: ip18.6929198.xyz
+    path: /github.com/Alvin9999
+- alterId: 0
+  cipher: auto
+  name: 🇺🇸_US_美国->🇨🇦_CA_加拿大_5
+  network: ws
+  port: 2082
+  server: 190.93.245.76
+  skip-cert-verify: true
+  sni: ''
+  type: vmess
   udp: true
-- cipher: aes-256-gcm
-  name: 🇺🇸_US_美国_11
-  password: zDNVedRFPQexG9v
-  port: 6379
-  server: 69.50.95.53
-  type: ss
+  uuid: 5f3f09ad-89cb-4e94-a7ad-aa8239913555
+  ws-opts:
+    headers:
+      host: ip18.6929198.xyz
+    path: /github.com/Alvin9999
+- alterId: 0
+  cipher: auto
+  name: 🇺🇸_US_美国
+  network: ws
+  port: 8880
+  server: 104.18.114.56
+  type: vmess
   udp: true
-- cipher: aes-256-gcm
-  name: 🇺🇸_US_美国_12
-  password: PCnnH6SQSnfoS27
-  port: 8090
-  server: 69.50.95.218
-  type: ss
+  uuid: 90f8f4dc-8092-4355-9047-05f506f5e9ab
+  ws-opts:
+    headers:
+      host: m1.106778.xyz
+    path: github.com/Alvin9999
+- alterId: 0
+  cipher: auto
+  name: 🇺🇸_US_美国->🇨🇦_CA_加拿大_6
+  network: ws
+  port: 2082
+  server: 170.114.46.219
+  type: vmess
   udp: true
-- cipher: chacha20-ietf-poly1305
-  name: 🇮🇪_IE_爱尔兰->🇺🇸_US_美国
-  password: nAOsWTXwwlBFd2Ez2dGK2s
-  port: 63314
-  server: 13.79.174.197
-  type: ss
+  uuid: 5f3f09ad-89cb-4e94-a7ad-aa8239913555
+  ws-opts:
+    headers:
+      host: ip18.6929198.xyz
+    path: /github.com/Alvin9999
+- alterId: 0
+  cipher: auto
+  name: 🇳🇱_NL_荷兰
+  network: ws
+  port: 2082
+  server: 45.131.208.116
+  type: vmess
   udp: true
-- cipher: aes-256-gcm
-  name: 🇨🇦_CA_加拿大
-  password: faBAoD54k87UJG7
-  port: 2376
-  server: 23.154.136.247
-  type: ss
+  uuid: 5f3f09ad-89cb-4e94-a7ad-aa8239913555
+  ws-opts:
+    headers:
+      host: ip18.6929198.xyz
+    path: /github.com/Alvin9999
+- alterId: 0
+  cipher: auto
+  name: 🇺🇸_US_美国->🇨🇦_CA_加拿大_7
+  network: ws
+  port: 2082
+  server: 190.93.244.64
+  type: vmess
   udp: true
-- cipher: aes-256-gcm
-  name: 🇺🇸_US_美国_13
-  password: zDNVedRFPQexG9v
-  port: 6379
-  server: 23.150.152.16
-  type: ss
+  uuid: 5f3f09ad-89cb-4e94-a7ad-aa8239913555
+  ws-opts:
+    headers:
+      host: ip18.6929198.xyz
+    path: /github.com/Alvin9999
+- alterId: 0
+  cipher: auto
+  name: 🇺🇸_US_美国->🇨🇦_CA_加拿大_8
+  network: ws
+  port: 2086
+  server: 104.21.238.163
+  type: vmess
   udp: true
-- cipher: aes-256-gcm
-  name: 🇺🇸_US_美国_14
-  password: faBAoD54k87UJG7
-  port: 2375
-  server: 69.50.95.218
-  type: ss
-  udp: true
-- cipher: aes-256-gcm
-  name: 🇺🇸_US_美国_15
-  password: kDWvXYZoTBcGkC4
-  port: 8882
-  server: 23.157.40.5
-  type: ss
-  udp: true
-- cipher: aes-256-gcm
-  name: 🇺🇸_US_美国_16
-  password: cdBIDV42DCwnfIN
-  port: 8119
-  server: 69.50.95.53
-  type: ss
-  udp: true
-- cipher: chacha20-ietf-poly1305
-  name: 🇲🇩_MD_摩尔多瓦
-  password: f8f7aCzcPKbsF8p3
-  port: 990
-  server: 185.93.173.218
-  type: ss
-  udp: true
-- cipher: aes-256-gcm
-  name: 🇺🇸_US_美国_17
-  password: TEzjfAYq2IjtuoS
-  port: 6679
-  server: 169.197.142.216
-  type: ss
-  udp: true
-- cipher: aes-256-gcm
-  name: 🇺🇸_US_美国_18
-  password: RexnBgU7EV5ADxG
-  port: 7001
-  server: 23.157.40.5
-  type: ss
-  udp: true
-- cipher: aes-256-gcm
-  name: 🇺🇸_US_美国_19
-  password: Y6R9pAtvxxzmGC
-  port: 5600
-  server: 23.157.40.5
-  type: ss
-  udp: true
-- cipher: aes-256-gcm
-  name: 🇺🇸_US_美国_20
-  password: faBAoD54k87UJG7
-  port: 2376
-  server: 139.64.165.230
-  type: ss
-  udp: true
-- cipher: aes-256-gcm
-  name: 🇺🇸_US_美国_21
-  password: kDWvXYZoTBcGkC4
-  port: 8881
-  server: 23.157.40.5
-  type: ss
-  udp: true
-- cipher: aes-256-gcm
-  name: 🇺🇸_US_美国_22
-  password: faBAoD54k87UJG7
-  port: 2376
-  server: 23.157.40.5
-  type: ss
-  udp: true
-- cipher: aes-256-gcm
-  name: 🇺🇸_US_美国_23
-  password: faBAoD54k87UJG7
-  port: 2376
-  server: 169.197.142.216
-  type: ss
-  udp: true
-- cipher: chacha20-ietf-poly1305
-  name: 🇷🇺_RU_俄罗斯
-  password: qgpdyzHj8rZW9fDxxkUHRI
-  port: 29312
-  server: 217.196.103.206
-  type: ss
-  udp: true
-- cipher: aes-256-gcm
-  name: 🇺🇸_US_美国_24
-  password: zDNVedRFPQexG9v
-  port: 6379
-  server: 69.50.95.218
-  type: ss
-  udp: true
-- cipher: aes-256-gcm
-  name: 🇺🇸_US_美国_25
-  password: PCnnH6SQSnfoS27
-  port: 8091
-  server: 69.50.95.53
-  type: ss
-  udp: true
-- cipher: aes-256-gcm
-  name: 🇺🇸_US_美国_26
-  password: Y6R9pAtvxxzmGC
-  port: 8888
-  server: 38.110.1.12
-  type: ss
-  udp: true
-- cipher: aes-256-gcm
-  name: 🇺🇸_US_美国_27
-  password: KixLvKzwjekG00rm
-  port: 5500
-  server: 139.64.165.230
-  type: ss
-  udp: true
-- cipher: aes-256-gcm
-  name: 🇺🇸_US_美国_28
-  password: pKEW8JPByTVTLtM
-  port: 443
-  server: 69.50.95.53
-  type: ss
-  udp: true
+  uuid: bc65fac2-7dc7-426f-acdd-0779a5035bde
+  ws-opts:
+    headers:
+      host: p1.613055.xyz
+    path: github.com/Alvin9999
 proxy-groups:
 - name: 🚀 节点选择
   proxies:
   - ♻️ 自动选择
   - DIRECT
-  - 🇺🇸_US_美国_1
-  - 🇺🇸_US_美国_2
-  - 🇺🇸_US_美国_3
-  - 🇺🇸_US_美国_4
-  - 🇺🇸_US_美国_5
-  - 🇺🇸_US_美国_6
-  - 🇺🇸_US_美国_7
-  - 🇬🇧_GB_英国->🇺🇸_US_美国
-  - 🇺🇸_US_美国_8
-  - 🇺🇸_US_美国_9
-  - 🇺🇸_US_美国_10
-  - 🇺🇸_US_美国_11
-  - 🇺🇸_US_美国_12
-  - 🇮🇪_IE_爱尔兰->🇺🇸_US_美国
-  - 🇨🇦_CA_加拿大
-  - 🇺🇸_US_美国_13
-  - 🇺🇸_US_美国_14
-  - 🇺🇸_US_美国_15
-  - 🇺🇸_US_美国_16
-  - 🇲🇩_MD_摩尔多瓦
-  - 🇺🇸_US_美国_17
-  - 🇺🇸_US_美国_18
-  - 🇺🇸_US_美国_19
-  - 🇺🇸_US_美国_20
-  - 🇺🇸_US_美国_21
-  - 🇺🇸_US_美国_22
-  - 🇺🇸_US_美国_23
-  - 🇷🇺_RU_俄罗斯
-  - 🇺🇸_US_美国_24
-  - 🇺🇸_US_美国_25
-  - 🇺🇸_US_美国_26
-  - 🇺🇸_US_美国_27
-  - 🇺🇸_US_美国_28
+  - 🇨🇷_CR_哥斯达黎加->🇨🇦_CA_加拿大_1
+  - 🇺🇸_US_美国->🇨🇦_CA_加拿大_1
+  - 🇨🇷_CR_哥斯达黎加->🇨🇦_CA_加拿大_2
+  - 🇺🇸_US_美国->🇨🇦_CA_加拿大_2
+  - 🇨🇷_CR_哥斯达黎加->🇨🇦_CA_加拿大_3
+  - 🇺🇸_US_美国->🇨🇦_CA_加拿大_3
+  - 🇨🇷_CR_哥斯达黎加->🇨🇦_CA_加拿大_4
+  - 🇺🇸_US_美国->🇨🇦_CA_加拿大_4
+  - 🇱🇹_LT_立陶宛->🇨🇦_CA_加拿大_1
+  - 🇱🇹_LT_立陶宛->🇨🇦_CA_加拿大_2
+  - 🇺🇸_US_美国->🇨🇦_CA_加拿大_5
+  - 🇺🇸_US_美国
+  - 🇺🇸_US_美国->🇨🇦_CA_加拿大_6
+  - 🇳🇱_NL_荷兰
+  - 🇺🇸_US_美国->🇨🇦_CA_加拿大_7
+  - 🇺🇸_US_美国->🇨🇦_CA_加拿大_8
   type: select
 - interval: 300
   name: ♻️ 自动选择
   proxies:
-  - 🇺🇸_US_美国_1
-  - 🇺🇸_US_美国_2
-  - 🇺🇸_US_美国_3
-  - 🇺🇸_US_美国_4
-  - 🇺🇸_US_美国_5
-  - 🇺🇸_US_美国_6
-  - 🇺🇸_US_美国_7
-  - 🇬🇧_GB_英国->🇺🇸_US_美国
-  - 🇺🇸_US_美国_8
-  - 🇺🇸_US_美国_9
-  - 🇺🇸_US_美国_10
-  - 🇺🇸_US_美国_11
-  - 🇺🇸_US_美国_12
-  - 🇮🇪_IE_爱尔兰->🇺🇸_US_美国
-  - 🇨🇦_CA_加拿大
-  - 🇺🇸_US_美国_13
-  - 🇺🇸_US_美国_14
-  - 🇺🇸_US_美国_15
-  - 🇺🇸_US_美国_16
-  - 🇲🇩_MD_摩尔多瓦
-  - 🇺🇸_US_美国_17
-  - 🇺🇸_US_美国_18
-  - 🇺🇸_US_美国_19
-  - 🇺🇸_US_美国_20
-  - 🇺🇸_US_美国_21
-  - 🇺🇸_US_美国_22
-  - 🇺🇸_US_美国_23
-  - 🇷🇺_RU_俄罗斯
-  - 🇺🇸_US_美国_24
-  - 🇺🇸_US_美国_25
-  - 🇺🇸_US_美国_26
-  - 🇺🇸_US_美国_27
-  - 🇺🇸_US_美国_28
+  - 🇨🇷_CR_哥斯达黎加->🇨🇦_CA_加拿大_1
+  - 🇺🇸_US_美国->🇨🇦_CA_加拿大_1
+  - 🇨🇷_CR_哥斯达黎加->🇨🇦_CA_加拿大_2
+  - 🇺🇸_US_美国->🇨🇦_CA_加拿大_2
+  - 🇨🇷_CR_哥斯达黎加->🇨🇦_CA_加拿大_3
+  - 🇺🇸_US_美国->🇨🇦_CA_加拿大_3
+  - 🇨🇷_CR_哥斯达黎加->🇨🇦_CA_加拿大_4
+  - 🇺🇸_US_美国->🇨🇦_CA_加拿大_4
+  - 🇱🇹_LT_立陶宛->🇨🇦_CA_加拿大_1
+  - 🇱🇹_LT_立陶宛->🇨🇦_CA_加拿大_2
+  - 🇺🇸_US_美国->🇨🇦_CA_加拿大_5
+  - 🇺🇸_US_美国
+  - 🇺🇸_US_美国->🇨🇦_CA_加拿大_6
+  - 🇳🇱_NL_荷兰
+  - 🇺🇸_US_美国->🇨🇦_CA_加拿大_7
+  - 🇺🇸_US_美国->🇨🇦_CA_加拿大_8
   tolerance: 50
   type: url-test
   url: http://www.gstatic.com/generate_204
@@ -346,153 +299,85 @@ proxy-groups:
   - 🚀 节点选择
   - ♻️ 自动选择
   - 🎯 全球直连
-  - 🇺🇸_US_美国_1
-  - 🇺🇸_US_美国_2
-  - 🇺🇸_US_美国_3
-  - 🇺🇸_US_美国_4
-  - 🇺🇸_US_美国_5
-  - 🇺🇸_US_美国_6
-  - 🇺🇸_US_美国_7
-  - 🇬🇧_GB_英国->🇺🇸_US_美国
-  - 🇺🇸_US_美国_8
-  - 🇺🇸_US_美国_9
-  - 🇺🇸_US_美国_10
-  - 🇺🇸_US_美国_11
-  - 🇺🇸_US_美国_12
-  - 🇮🇪_IE_爱尔兰->🇺🇸_US_美国
-  - 🇨🇦_CA_加拿大
-  - 🇺🇸_US_美国_13
-  - 🇺🇸_US_美国_14
-  - 🇺🇸_US_美国_15
-  - 🇺🇸_US_美国_16
-  - 🇲🇩_MD_摩尔多瓦
-  - 🇺🇸_US_美国_17
-  - 🇺🇸_US_美国_18
-  - 🇺🇸_US_美国_19
-  - 🇺🇸_US_美国_20
-  - 🇺🇸_US_美国_21
-  - 🇺🇸_US_美国_22
-  - 🇺🇸_US_美国_23
-  - 🇷🇺_RU_俄罗斯
-  - 🇺🇸_US_美国_24
-  - 🇺🇸_US_美国_25
-  - 🇺🇸_US_美国_26
-  - 🇺🇸_US_美国_27
-  - 🇺🇸_US_美国_28
+  - 🇨🇷_CR_哥斯达黎加->🇨🇦_CA_加拿大_1
+  - 🇺🇸_US_美国->🇨🇦_CA_加拿大_1
+  - 🇨🇷_CR_哥斯达黎加->🇨🇦_CA_加拿大_2
+  - 🇺🇸_US_美国->🇨🇦_CA_加拿大_2
+  - 🇨🇷_CR_哥斯达黎加->🇨🇦_CA_加拿大_3
+  - 🇺🇸_US_美国->🇨🇦_CA_加拿大_3
+  - 🇨🇷_CR_哥斯达黎加->🇨🇦_CA_加拿大_4
+  - 🇺🇸_US_美国->🇨🇦_CA_加拿大_4
+  - 🇱🇹_LT_立陶宛->🇨🇦_CA_加拿大_1
+  - 🇱🇹_LT_立陶宛->🇨🇦_CA_加拿大_2
+  - 🇺🇸_US_美国->🇨🇦_CA_加拿大_5
+  - 🇺🇸_US_美国
+  - 🇺🇸_US_美国->🇨🇦_CA_加拿大_6
+  - 🇳🇱_NL_荷兰
+  - 🇺🇸_US_美国->🇨🇦_CA_加拿大_7
+  - 🇺🇸_US_美国->🇨🇦_CA_加拿大_8
   type: select
 - name: 📲 电报信息
   proxies:
   - 🚀 节点选择
   - 🎯 全球直连
-  - 🇺🇸_US_美国_1
-  - 🇺🇸_US_美国_2
-  - 🇺🇸_US_美国_3
-  - 🇺🇸_US_美国_4
-  - 🇺🇸_US_美国_5
-  - 🇺🇸_US_美国_6
-  - 🇺🇸_US_美国_7
-  - 🇬🇧_GB_英国->🇺🇸_US_美国
-  - 🇺🇸_US_美国_8
-  - 🇺🇸_US_美国_9
-  - 🇺🇸_US_美国_10
-  - 🇺🇸_US_美国_11
-  - 🇺🇸_US_美国_12
-  - 🇮🇪_IE_爱尔兰->🇺🇸_US_美国
-  - 🇨🇦_CA_加拿大
-  - 🇺🇸_US_美国_13
-  - 🇺🇸_US_美国_14
-  - 🇺🇸_US_美国_15
-  - 🇺🇸_US_美国_16
-  - 🇲🇩_MD_摩尔多瓦
-  - 🇺🇸_US_美国_17
-  - 🇺🇸_US_美国_18
-  - 🇺🇸_US_美国_19
-  - 🇺🇸_US_美国_20
-  - 🇺🇸_US_美国_21
-  - 🇺🇸_US_美国_22
-  - 🇺🇸_US_美国_23
-  - 🇷🇺_RU_俄罗斯
-  - 🇺🇸_US_美国_24
-  - 🇺🇸_US_美国_25
-  - 🇺🇸_US_美国_26
-  - 🇺🇸_US_美国_27
-  - 🇺🇸_US_美国_28
+  - 🇨🇷_CR_哥斯达黎加->🇨🇦_CA_加拿大_1
+  - 🇺🇸_US_美国->🇨🇦_CA_加拿大_1
+  - 🇨🇷_CR_哥斯达黎加->🇨🇦_CA_加拿大_2
+  - 🇺🇸_US_美国->🇨🇦_CA_加拿大_2
+  - 🇨🇷_CR_哥斯达黎加->🇨🇦_CA_加拿大_3
+  - 🇺🇸_US_美国->🇨🇦_CA_加拿大_3
+  - 🇨🇷_CR_哥斯达黎加->🇨🇦_CA_加拿大_4
+  - 🇺🇸_US_美国->🇨🇦_CA_加拿大_4
+  - 🇱🇹_LT_立陶宛->🇨🇦_CA_加拿大_1
+  - 🇱🇹_LT_立陶宛->🇨🇦_CA_加拿大_2
+  - 🇺🇸_US_美国->🇨🇦_CA_加拿大_5
+  - 🇺🇸_US_美国
+  - 🇺🇸_US_美国->🇨🇦_CA_加拿大_6
+  - 🇳🇱_NL_荷兰
+  - 🇺🇸_US_美国->🇨🇦_CA_加拿大_7
+  - 🇺🇸_US_美国->🇨🇦_CA_加拿大_8
   type: select
 - name: Ⓜ️ 微软服务
   proxies:
   - 🎯 全球直连
   - 🚀 节点选择
-  - 🇺🇸_US_美国_1
-  - 🇺🇸_US_美国_2
-  - 🇺🇸_US_美国_3
-  - 🇺🇸_US_美国_4
-  - 🇺🇸_US_美国_5
-  - 🇺🇸_US_美国_6
-  - 🇺🇸_US_美国_7
-  - 🇬🇧_GB_英国->🇺🇸_US_美国
-  - 🇺🇸_US_美国_8
-  - 🇺🇸_US_美国_9
-  - 🇺🇸_US_美国_10
-  - 🇺🇸_US_美国_11
-  - 🇺🇸_US_美国_12
-  - 🇮🇪_IE_爱尔兰->🇺🇸_US_美国
-  - 🇨🇦_CA_加拿大
-  - 🇺🇸_US_美国_13
-  - 🇺🇸_US_美国_14
-  - 🇺🇸_US_美国_15
-  - 🇺🇸_US_美国_16
-  - 🇲🇩_MD_摩尔多瓦
-  - 🇺🇸_US_美国_17
-  - 🇺🇸_US_美国_18
-  - 🇺🇸_US_美国_19
-  - 🇺🇸_US_美国_20
-  - 🇺🇸_US_美国_21
-  - 🇺🇸_US_美国_22
-  - 🇺🇸_US_美国_23
-  - 🇷🇺_RU_俄罗斯
-  - 🇺🇸_US_美国_24
-  - 🇺🇸_US_美国_25
-  - 🇺🇸_US_美国_26
-  - 🇺🇸_US_美国_27
-  - 🇺🇸_US_美国_28
+  - 🇨🇷_CR_哥斯达黎加->🇨🇦_CA_加拿大_1
+  - 🇺🇸_US_美国->🇨🇦_CA_加拿大_1
+  - 🇨🇷_CR_哥斯达黎加->🇨🇦_CA_加拿大_2
+  - 🇺🇸_US_美国->🇨🇦_CA_加拿大_2
+  - 🇨🇷_CR_哥斯达黎加->🇨🇦_CA_加拿大_3
+  - 🇺🇸_US_美国->🇨🇦_CA_加拿大_3
+  - 🇨🇷_CR_哥斯达黎加->🇨🇦_CA_加拿大_4
+  - 🇺🇸_US_美国->🇨🇦_CA_加拿大_4
+  - 🇱🇹_LT_立陶宛->🇨🇦_CA_加拿大_1
+  - 🇱🇹_LT_立陶宛->🇨🇦_CA_加拿大_2
+  - 🇺🇸_US_美国->🇨🇦_CA_加拿大_5
+  - 🇺🇸_US_美国
+  - 🇺🇸_US_美国->🇨🇦_CA_加拿大_6
+  - 🇳🇱_NL_荷兰
+  - 🇺🇸_US_美国->🇨🇦_CA_加拿大_7
+  - 🇺🇸_US_美国->🇨🇦_CA_加拿大_8
   type: select
 - name: 🍎 苹果服务
   proxies:
   - 🚀 节点选择
   - 🎯 全球直连
-  - 🇺🇸_US_美国_1
-  - 🇺🇸_US_美国_2
-  - 🇺🇸_US_美国_3
-  - 🇺🇸_US_美国_4
-  - 🇺🇸_US_美国_5
-  - 🇺🇸_US_美国_6
-  - 🇺🇸_US_美国_7
-  - 🇬🇧_GB_英国->🇺🇸_US_美国
-  - 🇺🇸_US_美国_8
-  - 🇺🇸_US_美国_9
-  - 🇺🇸_US_美国_10
-  - 🇺🇸_US_美国_11
-  - 🇺🇸_US_美国_12
-  - 🇮🇪_IE_爱尔兰->🇺🇸_US_美国
-  - 🇨🇦_CA_加拿大
-  - 🇺🇸_US_美国_13
-  - 🇺🇸_US_美国_14
-  - 🇺🇸_US_美国_15
-  - 🇺🇸_US_美国_16
-  - 🇲🇩_MD_摩尔多瓦
-  - 🇺🇸_US_美国_17
-  - 🇺🇸_US_美国_18
-  - 🇺🇸_US_美国_19
-  - 🇺🇸_US_美国_20
-  - 🇺🇸_US_美国_21
-  - 🇺🇸_US_美国_22
-  - 🇺🇸_US_美国_23
-  - 🇷🇺_RU_俄罗斯
-  - 🇺🇸_US_美国_24
-  - 🇺🇸_US_美国_25
-  - 🇺🇸_US_美国_26
-  - 🇺🇸_US_美国_27
-  - 🇺🇸_US_美国_28
+  - 🇨🇷_CR_哥斯达黎加->🇨🇦_CA_加拿大_1
+  - 🇺🇸_US_美国->🇨🇦_CA_加拿大_1
+  - 🇨🇷_CR_哥斯达黎加->🇨🇦_CA_加拿大_2
+  - 🇺🇸_US_美国->🇨🇦_CA_加拿大_2
+  - 🇨🇷_CR_哥斯达黎加->🇨🇦_CA_加拿大_3
+  - 🇺🇸_US_美国->🇨🇦_CA_加拿大_3
+  - 🇨🇷_CR_哥斯达黎加->🇨🇦_CA_加拿大_4
+  - 🇺🇸_US_美国->🇨🇦_CA_加拿大_4
+  - 🇱🇹_LT_立陶宛->🇨🇦_CA_加拿大_1
+  - 🇱🇹_LT_立陶宛->🇨🇦_CA_加拿大_2
+  - 🇺🇸_US_美国->🇨🇦_CA_加拿大_5
+  - 🇺🇸_US_美国
+  - 🇺🇸_US_美国->🇨🇦_CA_加拿大_6
+  - 🇳🇱_NL_荷兰
+  - 🇺🇸_US_美国->🇨🇦_CA_加拿大_7
+  - 🇺🇸_US_美国->🇨🇦_CA_加拿大_8
   type: select
 - name: 🎯 全球直连
   proxies:
@@ -515,39 +400,22 @@ proxy-groups:
   - 🚀 节点选择
   - 🎯 全球直连
   - ♻️ 自动选择
-  - 🇺🇸_US_美国_1
-  - 🇺🇸_US_美国_2
-  - 🇺🇸_US_美国_3
-  - 🇺🇸_US_美国_4
-  - 🇺🇸_US_美国_5
-  - 🇺🇸_US_美国_6
-  - 🇺🇸_US_美国_7
-  - 🇬🇧_GB_英国->🇺🇸_US_美国
-  - 🇺🇸_US_美国_8
-  - 🇺🇸_US_美国_9
-  - 🇺🇸_US_美国_10
-  - 🇺🇸_US_美国_11
-  - 🇺🇸_US_美国_12
-  - 🇮🇪_IE_爱尔兰->🇺🇸_US_美国
-  - 🇨🇦_CA_加拿大
-  - 🇺🇸_US_美国_13
-  - 🇺🇸_US_美国_14
-  - 🇺🇸_US_美国_15
-  - 🇺🇸_US_美国_16
-  - 🇲🇩_MD_摩尔多瓦
-  - 🇺🇸_US_美国_17
-  - 🇺🇸_US_美国_18
-  - 🇺🇸_US_美国_19
-  - 🇺🇸_US_美国_20
-  - 🇺🇸_US_美国_21
-  - 🇺🇸_US_美国_22
-  - 🇺🇸_US_美国_23
-  - 🇷🇺_RU_俄罗斯
-  - 🇺🇸_US_美国_24
-  - 🇺🇸_US_美国_25
-  - 🇺🇸_US_美国_26
-  - 🇺🇸_US_美国_27
-  - 🇺🇸_US_美国_28
+  - 🇨🇷_CR_哥斯达黎加->🇨🇦_CA_加拿大_1
+  - 🇺🇸_US_美国->🇨🇦_CA_加拿大_1
+  - 🇨🇷_CR_哥斯达黎加->🇨🇦_CA_加拿大_2
+  - 🇺🇸_US_美国->🇨🇦_CA_加拿大_2
+  - 🇨🇷_CR_哥斯达黎加->🇨🇦_CA_加拿大_3
+  - 🇺🇸_US_美国->🇨🇦_CA_加拿大_3
+  - 🇨🇷_CR_哥斯达黎加->🇨🇦_CA_加拿大_4
+  - 🇺🇸_US_美国->🇨🇦_CA_加拿大_4
+  - 🇱🇹_LT_立陶宛->🇨🇦_CA_加拿大_1
+  - 🇱🇹_LT_立陶宛->🇨🇦_CA_加拿大_2
+  - 🇺🇸_US_美国->🇨🇦_CA_加拿大_5
+  - 🇺🇸_US_美国
+  - 🇺🇸_US_美国->🇨🇦_CA_加拿大_6
+  - 🇳🇱_NL_荷兰
+  - 🇺🇸_US_美国->🇨🇦_CA_加拿大_7
+  - 🇺🇸_US_美国->🇨🇦_CA_加拿大_8
   type: select
 rules:
 - DOMAIN-SUFFIX,acl4.ssr,🎯 全球直连
