--- a/nodes/wenode.yaml
+++ b/nodes/wenode.yaml
@@ -32,123 +32,322 @@ log-level: info
 mixed-port: 7890
 mode: rule
 proxies:
-- cipher: aes-256-cfb
-  name: 🇺🇸_US_美国->🇰🇷_KR_韩国
-  password: amazonskr05
-  port: 443
-  server: 34.216.74.178
-  type: ss
+- alterId: 0
+  cipher: auto
+  name: 🇺🇸_US_美国->🇨🇦_CA_加拿大_1
+  network: ws
+  port: 2082
+  server: 190.93.244.33
+  type: vmess
   udp: true
-- cipher: aes-256-cfb
-  name: 🇯🇵_JP_日本
-  password: amazonskr05
-  port: 443
-  server: 18.177.142.239
-  type: ss
+  uuid: 5f3f09ad-89cb-4e94-a7ad-aa8239913555
+  ws-opts:
+    headers:
+      host: ip18.6929198.xyz
+    path: /github.com/Alvin9999
+- alterId: 0
+  cipher: auto
+  name: 🇺🇸_US_美国->🇨🇦_CA_加拿大_2
+  network: ws
+  port: 2082
+  server: 104.254.140.141
+  skip-cert-verify: true
+  sni: ''
+  type: vmess
   udp: true
-- cipher: aes-256-cfb
-  name: 🇺🇸_US_美国_1
-  password: amazonskr05
-  port: 443
-  server: 52.12.67.119
-  type: ss
+  uuid: 5f3f09ad-89cb-4e94-a7ad-aa8239913555
+  ws-opts:
+    headers:
+      host: ip18.6929198.xyz
+    path: /github.com/Alvin9999
+- alterId: 0
+  cipher: auto
+  name: 🇨🇷_CR_哥斯达黎加->🇨🇦_CA_加拿大
+  network: ws
+  port: 2082
+  server: 190.93.247.203
+  skip-cert-verify: true
+  sni: ''
+  type: vmess
   udp: true
-- cipher: aes-256-cfb
-  name: 🇺🇸_US_美国->🇸🇬_SG_新加坡
-  password: amazonskr05
-  port: 443
-  server: 18.236.89.178
-  type: ss
+  uuid: 5f3f09ad-89cb-4e94-a7ad-aa8239913555
+  ws-opts:
+    headers:
+      host: ip18.6929198.xyz
+    path: /github.com/Alvin9999
+- alterId: 0
+  cipher: auto
+  name: 🇯🇵_JP_日本->🇨🇦_CA_加拿大
+  network: ws
+  port: 2082
+  server: 156.238.19.199
+  skip-cert-verify: true
+  sni: ''
+  type: vmess
   udp: true
-- cipher: aes-256-gcm
-  name: 🇺🇸_US_美国_2
-  password: RexnBgU7EV5ADxG
-  port: 7002
-  server: 38.110.1.3
-  type: ss
+  uuid: 5f3f09ad-89cb-4e94-a7ad-aa8239913555
+  ws-opts:
+    headers:
+      host: ip18.6929198.xyz
+    path: /github.com/Alvin9999
+- alterId: 0
+  cipher: auto
+  name: 🇬🇧_GB_英国->🇨🇦_CA_加拿大_1
+  network: ws
+  port: 2082
+  server: 45.8.211.242
+  skip-cert-verify: true
+  sni: ''
+  type: vmess
   udp: true
-- cipher: aes-256-cfb
-  name: 🇺🇸_US_美国->🇯🇵_JP_日本
-  password: amazonskr05
-  port: 443
-  server: 34.215.84.62
-  type: ss
+  uuid: 5f3f09ad-89cb-4e94-a7ad-aa8239913555
+  ws-opts:
+    headers:
+      host: ip18.6929198.xyz
+    path: /github.com/Alvin9999
+- alterId: 0
+  cipher: auto
+  name: 🇳🇱_NL_荷兰->🇨🇦_CA_加拿大_1
+  network: ws
+  port: 2082
+  server: 45.159.218.63
+  skip-cert-verify: true
+  sni: ''
+  type: vmess
   udp: true
-- cipher: aes-256-cfb
-  name: 🇺🇸_US_美国_3
-  password: amazonskr05
-  port: 443
-  server: 54.189.131.201
-  type: ss
+  uuid: 5f3f09ad-89cb-4e94-a7ad-aa8239913555
+  ws-opts:
+    headers:
+      host: ip18.6929198.xyz
+    path: /github.com/Alvin9999
+- alterId: 0
+  cipher: auto
+  name: 🇺🇸_US_美国->🇨🇦_CA_加拿大_3
+  network: ws
+  port: 2082
+  server: 190.93.245.168
+  type: vmess
   udp: true
-- cipher: aes-256-cfb
-  name: 🇺🇸_US_美国_4
-  password: amazonskr05
-  port: 443
-  server: 34.222.145.191
-  type: ss
+  uuid: 5f3f09ad-89cb-4e94-a7ad-aa8239913555
+  ws-opts:
+    headers:
+      host: ip18.6929198.xyz
+    path: /github.com/Alvin9999
+- alterId: 0
+  cipher: auto
+  name: 🇺🇸_US_美国->🇨🇦_CA_加拿大_4
+  network: ws
+  port: 2082
+  server: 159.112.235.35
+  type: vmess
   udp: true
-- cipher: aes-256-cfb
-  name: 🇺🇸_US_美国_5
-  password: amazonskr05
-  port: 443
-  server: 18.236.180.126
-  type: ss
+  uuid: 5f3f09ad-89cb-4e94-a7ad-aa8239913555
+  ws-opts:
+    headers:
+      host: ip18.6929198.xyz
+    path: /github.com/Alvin9999
+- alterId: 0
+  cipher: auto
+  name: 🇺🇸_US_美国->🇨🇦_CA_加拿大_5
+  network: ws
+  port: 2082
+  server: 190.93.244.1
+  skip-cert-verify: true
+  sni: ''
+  type: vmess
   udp: true
-- cipher: aes-128-gcm
-  name: 🇧🇬_BG_保加利亚
-  password: shadowsocks
-  port: 443
-  server: 149.34.244.82
-  type: ss
+  uuid: 5f3f09ad-89cb-4e94-a7ad-aa8239913555
+  ws-opts:
+    headers:
+      host: ip18.6929198.xyz
+    path: /github.com/Alvin9999
+- alterId: 0
+  cipher: auto
+  name: 🇬🇧_GB_英国->🇨🇦_CA_加拿大_2
+  network: ws
+  port: 2082
+  server: 45.85.119.170
+  type: vmess
   udp: true
-- cipher: chacha20-ietf-poly1305
-  name: 🇺🇸_US_美国_6
-  password: 5cp9Z3iWnJZ2
-  port: 443
-  server: 205.134.180.150
-  type: ss
+  uuid: 5f3f09ad-89cb-4e94-a7ad-aa8239913555
+  ws-opts:
+    headers:
+      host: ip18.6929198.xyz
+    path: /github.com/Alvin9999
+- alterId: 0
+  cipher: auto
+  name: 🇫🇷_FR_法国->🇨🇦_CA_加拿大
+  network: ws
+  port: 2082
+  server: 45.80.111.9
+  type: vmess
   udp: true
-- cipher: aes-256-cfb
-  name: 🇸🇬_SG_新加坡->🇺🇸_US_美国
-  password: amazonskr05
-  port: 443
-  server: 18.143.178.37
-  type: ss
+  uuid: 5f3f09ad-89cb-4e94-a7ad-aa8239913555
+  ws-opts:
+    headers:
+      host: ip18.6929198.xyz
+    path: /github.com/Alvin9999
+- alterId: 0
+  cipher: auto
+  name: 🇺🇦_UA_乌克兰->🇨🇦_CA_加拿大
+  network: ws
+  port: 2082
+  server: 31.43.179.32
+  skip-cert-verify: true
+  sni: ''
+  type: vmess
   udp: true
+  uuid: 5f3f09ad-89cb-4e94-a7ad-aa8239913555
+  ws-opts:
+    headers:
+      host: ip18.6929198.xyz
+    path: /github.com/Alvin9999
+- alterId: 0
+  cipher: auto
+  name: 🇷🇺_RU_俄罗斯->🇨🇦_CA_加拿大
+  network: ws
+  port: 2082
+  server: 185.221.160.12
+  type: vmess
+  udp: true
+  uuid: 5f3f09ad-89cb-4e94-a7ad-aa8239913555
+  ws-opts:
+    headers:
+      host: ip18.6929198.xyz
+    path: /github.com/Alvin9999
+- alterId: 0
+  cipher: auto
+  name: 🇬🇧_GB_英国->🇨🇦_CA_加拿大_3
+  network: ws
+  port: 2082
+  server: 45.12.30.237
+  skip-cert-verify: true
+  sni: ''
+  type: vmess
+  udp: true
+  uuid: 5f3f09ad-89cb-4e94-a7ad-aa8239913555
+  ws-opts:
+    headers:
+      host: ip18.6929198.xyz
+    path: /github.com/Alvin9999
+- alterId: 0
+  cipher: auto
+  name: 🇱🇺_LU_卢森堡->🇨🇦_CA_加拿大_1
+  network: ws
+  port: 2082
+  server: 188.42.89.14
+  type: vmess
+  udp: true
+  uuid: 5f3f09ad-89cb-4e94-a7ad-aa8239913555
+  ws-opts:
+    headers:
+      host: ip18.6929198.xyz
+    path: /github.com/Alvin9999
+- alterId: 0
+  cipher: auto
+  name: 🇳🇱_NL_荷兰->🇨🇦_CA_加拿大_2
+  network: ws
+  port: 2082
+  server: 185.193.31.108
+  type: vmess
+  udp: true
+  uuid: 5f3f09ad-89cb-4e94-a7ad-aa8239913555
+  ws-opts:
+    headers:
+      host: ip18.6929198.xyz
+    path: /github.com/Alvin9999
+- alterId: 0
+  cipher: auto
+  name: 🇱🇺_LU_卢森堡->🇨🇦_CA_加拿大_2
+  network: ws
+  port: 2082
+  server: 188.42.88.198
+  skip-cert-verify: true
+  sni: ''
+  type: vmess
+  udp: true
+  uuid: 5f3f09ad-89cb-4e94-a7ad-aa8239913555
+  ws-opts:
+    headers:
+      host: ip18.6929198.xyz
+    path: /github.com/Alvin9999
+- alterId: 0
+  cipher: auto
+  name: 🇪🇸_ES_西班牙->🇨🇦_CA_加拿大
+  network: ws
+  port: 2082
+  server: 185.251.83.156
+  skip-cert-verify: true
+  sni: ''
+  type: vmess
+  udp: true
+  uuid: 5f3f09ad-89cb-4e94-a7ad-aa8239913555
+  ws-opts:
+    headers:
+      host: ip18.6929198.xyz
+    path: /github.com/Alvin9999
+- alterId: 0
+  cipher: auto
+  name: 🇺🇸_US_美国->🇨🇦_CA_加拿大_6
+  network: ws
+  port: 2082
+  server: 154.85.99.206
+  skip-cert-verify: true
+  sni: ''
+  type: vmess
+  udp: true
+  uuid: 5f3f09ad-89cb-4e94-a7ad-aa8239913555
+  ws-opts:
+    headers:
+      host: ip18.6929198.xyz
+    path: /github.com/Alvin9999
 proxy-groups:
 - name: 🚀 节点选择
   proxies:
   - ♻️ 自动选择
   - DIRECT
-  - 🇺🇸_US_美国->🇰🇷_KR_韩国
-  - 🇯🇵_JP_日本
-  - 🇺🇸_US_美国_1
-  - 🇺🇸_US_美国->🇸🇬_SG_新加坡
-  - 🇺🇸_US_美国_2
-  - 🇺🇸_US_美国->🇯🇵_JP_日本
-  - 🇺🇸_US_美国_3
-  - 🇺🇸_US_美国_4
-  - 🇺🇸_US_美国_5
-  - 🇧🇬_BG_保加利亚
-  - 🇺🇸_US_美国_6
-  - 🇸🇬_SG_新加坡->🇺🇸_US_美国
+  - 🇺🇸_US_美国->🇨🇦_CA_加拿大_1
+  - 🇺🇸_US_美国->🇨🇦_CA_加拿大_2
+  - 🇨🇷_CR_哥斯达黎加->🇨🇦_CA_加拿大
+  - 🇯🇵_JP_日本->🇨🇦_CA_加拿大
+  - 🇬🇧_GB_英国->🇨🇦_CA_加拿大_1
+  - 🇳🇱_NL_荷兰->🇨🇦_CA_加拿大_1
+  - 🇺🇸_US_美国->🇨🇦_CA_加拿大_3
+  - 🇺🇸_US_美国->🇨🇦_CA_加拿大_4
+  - 🇺🇸_US_美国->🇨🇦_CA_加拿大_5
+  - 🇬🇧_GB_英国->🇨🇦_CA_加拿大_2
+  - 🇫🇷_FR_法国->🇨🇦_CA_加拿大
+  - 🇺🇦_UA_乌克兰->🇨🇦_CA_加拿大
+  - 🇷🇺_RU_俄罗斯->🇨🇦_CA_加拿大
+  - 🇬🇧_GB_英国->🇨🇦_CA_加拿大_3
+  - 🇱🇺_LU_卢森堡->🇨🇦_CA_加拿大_1
+  - 🇳🇱_NL_荷兰->🇨🇦_CA_加拿大_2
+  - 🇱🇺_LU_卢森堡->🇨🇦_CA_加拿大_2
+  - 🇪🇸_ES_西班牙->🇨🇦_CA_加拿大
+  - 🇺🇸_US_美国->🇨🇦_CA_加拿大_6
   type: select
 - interval: 300
   name: ♻️ 自动选择
   proxies:
-  - 🇺🇸_US_美国->🇰🇷_KR_韩国
-  - 🇯🇵_JP_日本
-  - 🇺🇸_US_美国_1
-  - 🇺🇸_US_美国->🇸🇬_SG_新加坡
-  - 🇺🇸_US_美国_2
-  - 🇺🇸_US_美国->🇯🇵_JP_日本
-  - 🇺🇸_US_美国_3
-  - 🇺🇸_US_美国_4
-  - 🇺🇸_US_美国_5
-  - 🇧🇬_BG_保加利亚
-  - 🇺🇸_US_美国_6
-  - 🇸🇬_SG_新加坡->🇺🇸_US_美国
+  - 🇺🇸_US_美国->🇨🇦_CA_加拿大_1
+  - 🇺🇸_US_美国->🇨🇦_CA_加拿大_2
+  - 🇨🇷_CR_哥斯达黎加->🇨🇦_CA_加拿大
+  - 🇯🇵_JP_日本->🇨🇦_CA_加拿大
+  - 🇬🇧_GB_英国->🇨🇦_CA_加拿大_1
+  - 🇳🇱_NL_荷兰->🇨🇦_CA_加拿大_1
+  - 🇺🇸_US_美国->🇨🇦_CA_加拿大_3
+  - 🇺🇸_US_美国->🇨🇦_CA_加拿大_4
+  - 🇺🇸_US_美国->🇨🇦_CA_加拿大_5
+  - 🇬🇧_GB_英国->🇨🇦_CA_加拿大_2
+  - 🇫🇷_FR_法国->🇨🇦_CA_加拿大
+  - 🇺🇦_UA_乌克兰->🇨🇦_CA_加拿大
+  - 🇷🇺_RU_俄罗斯->🇨🇦_CA_加拿大
+  - 🇬🇧_GB_英国->🇨🇦_CA_加拿大_3
+  - 🇱🇺_LU_卢森堡->🇨🇦_CA_加拿大_1
+  - 🇳🇱_NL_荷兰->🇨🇦_CA_加拿大_2
+  - 🇱🇺_LU_卢森堡->🇨🇦_CA_加拿大_2
+  - 🇪🇸_ES_西班牙->🇨🇦_CA_加拿大
+  - 🇺🇸_US_美国->🇨🇦_CA_加拿大_6
   tolerance: 50
   type: url-test
   url: http://www.gstatic.com/generate_204
@@ -157,69 +356,97 @@ proxy-groups:
   - 🚀 节点选择
   - ♻️ 自动选择
   - 🎯 全球直连
-  - 🇺🇸_US_美国->🇰🇷_KR_韩国
-  - 🇯🇵_JP_日本
-  - 🇺🇸_US_美国_1
-  - 🇺🇸_US_美国->🇸🇬_SG_新加坡
-  - 🇺🇸_US_美国_2
-  - 🇺🇸_US_美国->🇯🇵_JP_日本
-  - 🇺🇸_US_美国_3
-  - 🇺🇸_US_美国_4
-  - 🇺🇸_US_美国_5
-  - 🇧🇬_BG_保加利亚
-  - 🇺🇸_US_美国_6
-  - 🇸🇬_SG_新加坡->🇺🇸_US_美国
+  - 🇺🇸_US_美国->🇨🇦_CA_加拿大_1
+  - 🇺🇸_US_美国->🇨🇦_CA_加拿大_2
+  - 🇨🇷_CR_哥斯达黎加->🇨🇦_CA_加拿大
+  - 🇯🇵_JP_日本->🇨🇦_CA_加拿大
+  - 🇬🇧_GB_英国->🇨🇦_CA_加拿大_1
+  - 🇳🇱_NL_荷兰->🇨🇦_CA_加拿大_1
+  - 🇺🇸_US_美国->🇨🇦_CA_加拿大_3
+  - 🇺🇸_US_美国->🇨🇦_CA_加拿大_4
+  - 🇺🇸_US_美国->🇨🇦_CA_加拿大_5
+  - 🇬🇧_GB_英国->🇨🇦_CA_加拿大_2
+  - 🇫🇷_FR_法国->🇨🇦_CA_加拿大
+  - 🇺🇦_UA_乌克兰->🇨🇦_CA_加拿大
+  - 🇷🇺_RU_俄罗斯->🇨🇦_CA_加拿大
+  - 🇬🇧_GB_英国->🇨🇦_CA_加拿大_3
+  - 🇱🇺_LU_卢森堡->🇨🇦_CA_加拿大_1
+  - 🇳🇱_NL_荷兰->🇨🇦_CA_加拿大_2
+  - 🇱🇺_LU_卢森堡->🇨🇦_CA_加拿大_2
+  - 🇪🇸_ES_西班牙->🇨🇦_CA_加拿大
+  - 🇺🇸_US_美国->🇨🇦_CA_加拿大_6
   type: select
 - name: 📲 电报信息
   proxies:
   - 🚀 节点选择
   - 🎯 全球直连
-  - 🇺🇸_US_美国->🇰🇷_KR_韩国
-  - 🇯🇵_JP_日本
-  - 🇺🇸_US_美国_1
-  - 🇺🇸_US_美国->🇸🇬_SG_新加坡
-  - 🇺🇸_US_美国_2
-  - 🇺🇸_US_美国->🇯🇵_JP_日本
-  - 🇺🇸_US_美国_3
-  - 🇺🇸_US_美国_4
-  - 🇺🇸_US_美国_5
-  - 🇧🇬_BG_保加利亚
-  - 🇺🇸_US_美国_6
-  - 🇸🇬_SG_新加坡->🇺🇸_US_美国
+  - 🇺🇸_US_美国->🇨🇦_CA_加拿大_1
+  - 🇺🇸_US_美国->🇨🇦_CA_加拿大_2
+  - 🇨🇷_CR_哥斯达黎加->🇨🇦_CA_加拿大
+  - 🇯🇵_JP_日本->🇨🇦_CA_加拿大
+  - 🇬🇧_GB_英国->🇨🇦_CA_加拿大_1
+  - 🇳🇱_NL_荷兰->🇨🇦_CA_加拿大_1
+  - 🇺🇸_US_美国->🇨🇦_CA_加拿大_3
+  - 🇺🇸_US_美国->🇨🇦_CA_加拿大_4
+  - 🇺🇸_US_美国->🇨🇦_CA_加拿大_5
+  - 🇬🇧_GB_英国->🇨🇦_CA_加拿大_2
+  - 🇫🇷_FR_法国->🇨🇦_CA_加拿大
+  - 🇺🇦_UA_乌克兰->🇨🇦_CA_加拿大
+  - 🇷🇺_RU_俄罗斯->🇨🇦_CA_加拿大
+  - 🇬🇧_GB_英国->🇨🇦_CA_加拿大_3
+  - 🇱🇺_LU_卢森堡->🇨🇦_CA_加拿大_1
+  - 🇳🇱_NL_荷兰->🇨🇦_CA_加拿大_2
+  - 🇱🇺_LU_卢森堡->🇨🇦_CA_加拿大_2
+  - 🇪🇸_ES_西班牙->🇨🇦_CA_加拿大
+  - 🇺🇸_US_美国->🇨🇦_CA_加拿大_6
   type: select
 - name: Ⓜ️ 微软服务
   proxies:
   - 🎯 全球直连
   - 🚀 节点选择
-  - 🇺🇸_US_美国->🇰🇷_KR_韩国
-  - 🇯🇵_JP_日本
-  - 🇺🇸_US_美国_1
-  - 🇺🇸_US_美国->🇸🇬_SG_新加坡
-  - 🇺🇸_US_美国_2
-  - 🇺🇸_US_美国->🇯🇵_JP_日本
-  - 🇺🇸_US_美国_3
-  - 🇺🇸_US_美国_4
-  - 🇺🇸_US_美国_5
-  - 🇧🇬_BG_保加利亚
-  - 🇺🇸_US_美国_6
-  - 🇸🇬_SG_新加坡->🇺🇸_US_美国
+  - 🇺🇸_US_美国->🇨🇦_CA_加拿大_1
+  - 🇺🇸_US_美国->🇨🇦_CA_加拿大_2
+  - 🇨🇷_CR_哥斯达黎加->🇨🇦_CA_加拿大
+  - 🇯🇵_JP_日本->🇨🇦_CA_加拿大
+  - 🇬🇧_GB_英国->🇨🇦_CA_加拿大_1
+  - 🇳🇱_NL_荷兰->🇨🇦_CA_加拿大_1
+  - 🇺🇸_US_美国->🇨🇦_CA_加拿大_3
+  - 🇺🇸_US_美国->🇨🇦_CA_加拿大_4
+  - 🇺🇸_US_美国->🇨🇦_CA_加拿大_5
+  - 🇬🇧_GB_英国->🇨🇦_CA_加拿大_2
+  - 🇫🇷_FR_法国->🇨🇦_CA_加拿大
+  - 🇺🇦_UA_乌克兰->🇨🇦_CA_加拿大
+  - 🇷🇺_RU_俄罗斯->🇨🇦_CA_加拿大
+  - 🇬🇧_GB_英国->🇨🇦_CA_加拿大_3
+  - 🇱🇺_LU_卢森堡->🇨🇦_CA_加拿大_1
+  - 🇳🇱_NL_荷兰->🇨🇦_CA_加拿大_2
+  - 🇱🇺_LU_卢森堡->🇨🇦_CA_加拿大_2
+  - 🇪🇸_ES_西班牙->🇨🇦_CA_加拿大
+  - 🇺🇸_US_美国->🇨🇦_CA_加拿大_6
   type: select
 - name: 🍎 苹果服务
   proxies:
   - 🚀 节点选择
   - 🎯 全球直连
-  - 🇺🇸_US_美国->🇰🇷_KR_韩国
-  - 🇯🇵_JP_日本
-  - 🇺🇸_US_美国_1
-  - 🇺🇸_US_美国->🇸🇬_SG_新加坡
-  - 🇺🇸_US_美国_2
-  - 🇺🇸_US_美国->🇯🇵_JP_日本
-  - 🇺🇸_US_美国_3
-  - 🇺🇸_US_美国_4
-  - 🇺🇸_US_美国_5
-  - 🇧🇬_BG_保加利亚
-  - 🇺🇸_US_美国_6
-  - 🇸🇬_SG_新加坡->🇺🇸_US_美国
+  - 🇺🇸_US_美国->🇨🇦_CA_加拿大_1
+  - 🇺🇸_US_美国->🇨🇦_CA_加拿大_2
+  - 🇨🇷_CR_哥斯达黎加->🇨🇦_CA_加拿大
+  - 🇯🇵_JP_日本->🇨🇦_CA_加拿大
+  - 🇬🇧_GB_英国->🇨🇦_CA_加拿大_1
+  - 🇳🇱_NL_荷兰->🇨🇦_CA_加拿大_1
+  - 🇺🇸_US_美国->🇨🇦_CA_加拿大_3
+  - 🇺🇸_US_美国->🇨🇦_CA_加拿大_4
+  - 🇺🇸_US_美国->🇨🇦_CA_加拿大_5
+  - 🇬🇧_GB_英国->🇨🇦_CA_加拿大_2
+  - 🇫🇷_FR_法国->🇨🇦_CA_加拿大
+  - 🇺🇦_UA_乌克兰->🇨🇦_CA_加拿大
+  - 🇷🇺_RU_俄罗斯->🇨🇦_CA_加拿大
+  - 🇬🇧_GB_英国->🇨🇦_CA_加拿大_3
+  - 🇱🇺_LU_卢森堡->🇨🇦_CA_加拿大_1
+  - 🇳🇱_NL_荷兰->🇨🇦_CA_加拿大_2
+  - 🇱🇺_LU_卢森堡->🇨🇦_CA_加拿大_2
+  - 🇪🇸_ES_西班牙->🇨🇦_CA_加拿大
+  - 🇺🇸_US_美国->🇨🇦_CA_加拿大_6
   type: select
 - name: 🎯 全球直连
   proxies:
@@ -242,18 +469,25 @@ proxy-groups:
   - 🚀 节点选择
   - 🎯 全球直连
   - ♻️ 自动选择
-  - 🇺🇸_US_美国->🇰🇷_KR_韩国
-  - 🇯🇵_JP_日本
-  - 🇺🇸_US_美国_1
-  - 🇺🇸_US_美国->🇸🇬_SG_新加坡
-  - 🇺🇸_US_美国_2
-  - 🇺🇸_US_美国->🇯🇵_JP_日本
-  - 🇺🇸_US_美国_3
-  - 🇺🇸_US_美国_4
-  - 🇺🇸_US_美国_5
-  - 🇧🇬_BG_保加利亚
-  - 🇺🇸_US_美国_6
-  - 🇸🇬_SG_新加坡->🇺🇸_US_美国
+  - 🇺🇸_US_美国->🇨🇦_CA_加拿大_1
+  - 🇺🇸_US_美国->🇨🇦_CA_加拿大_2
+  - 🇨🇷_CR_哥斯达黎加->🇨🇦_CA_加拿大
+  - 🇯🇵_JP_日本->🇨🇦_CA_加拿大
+  - 🇬🇧_GB_英国->🇨🇦_CA_加拿大_1
+  - 🇳🇱_NL_荷兰->🇨🇦_CA_加拿大_1
+  - 🇺🇸_US_美国->🇨🇦_CA_加拿大_3
+  - 🇺🇸_US_美国->🇨🇦_CA_加拿大_4
+  - 🇺🇸_US_美国->🇨🇦_CA_加拿大_5
+  - 🇬🇧_GB_英国->🇨🇦_CA_加拿大_2
+  - 🇫🇷_FR_法国->🇨🇦_CA_加拿大
+  - 🇺🇦_UA_乌克兰->🇨🇦_CA_加拿大
+  - 🇷🇺_RU_俄罗斯->🇨🇦_CA_加拿大
+  - 🇬🇧_GB_英国->🇨🇦_CA_加拿大_3
+  - 🇱🇺_LU_卢森堡->🇨🇦_CA_加拿大_1
+  - 🇳🇱_NL_荷兰->🇨🇦_CA_加拿大_2
+  - 🇱🇺_LU_卢森堡->🇨🇦_CA_加拿大_2
+  - 🇪🇸_ES_西班牙->🇨🇦_CA_加拿大
+  - 🇺🇸_US_美国->🇨🇦_CA_加拿大_6
   type: select
 rules:
 - DOMAIN-SUFFIX,acl4.ssr,🎯 全球直连
